# ats-plugins

./: .gitmodules  Makefile
audioanalysis/: .clang_complete
audioanalysis/src/: Makefile  audiodata.c  audiodata.h  ebur128.c  ebur128.h  ebur128_blocklist.c  ebur128_blocklist.h  error.c  error.h  gstaudioanalysis.c  gstaudioanalysis.h
render/gllogoverlay/gllogoverlay/: Makefile  errorshandler.c  errorshandler.h  gldrawing.c  gldrawing.h  gstgldisplayerrors.c  gstgldisplayerrors.h
render/gllogoverlay/src/: Makefile  errorshandler.c  gldrawing.c  gldrawing.h  gstgldisplayerrors.c  gstgllogoverlay.c  gstgllogoverlay.h
render/gllogoverlay/testfilterapp/: main.c  using.txt
render/glsoundbar/src/: Makefile  audiosamplesbuf.c  audiosamplesbuf.h  gldrawing.c  gldrawing.h  gstglsoundbar.c  gstglsoundbar.h  shaderenv.c  shaderenv.h
render/gltextoverlay/gltextoverlay/: Makefile  gldrawing.c  gldrawing.h  gstgltextoverlay.c  gstgltextoverlay.h
render/gltextoverlay/src/: Makefile  gldrawing.c  gldrawing.h  gstgltextoverlay.c  gstgltextoverlay.h
render/gltextoverlay/testfilterapp/: Makefile  main.c  using.txt
render/rust/: Cargo.toml
render/rust/src/: lib.rs
render/rust/src/soundbar/: mod.rs
render/soundbar/src/: Makefile  gstsoundbar.c  gstsoundbar.h  render.h
videoanalysis/: .clang_complete
videoanalysis/legacy/: block.h  errors.h  generate_array.py  gstvideoanalysis.c  gstvideoanalysis.h  videodata.h
videoanalysis/src/: Makefile  analysis.h  analysis.h.template  error.c  error.h  gstvideoanalysis.c  gstvideoanalysis.h  videodata.c  videodata.h
(+6 files in other folders)
